--- a/app/src/main/res/layout/activity_main_profile_photo.xml
+++ b/app/src/main/res/layout/activity_main_profile_photo.xml
@@ -10,7 +10,7 @@
         android:id="@+id/photo_img"
         android:layout_width="match_parent"
         android:layout_height="@dimen/profile_image_size"
-        android:background="@color/user_photo_bgr"
+        android:background="@color/color_grey_background"
         android:scaleType="centerCrop"
         />
 
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/placeholder_img"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/spacing_small_8"
+            android:layout_marginBottom="@dimen/spacing_8"
             android:gravity="center"
 
             android:shadowColor="@android:color/black"
@@ -35,7 +35,7 @@
             android:shadowRadius="@integer/photo_placeholder_shadow_radius"
 
             android:fontFamily="@string/font_medium"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:textSize="@dimen/change_photo_text_size"
             android:text="@string/change_profile_photo"/>
 
@@ -46,7 +46,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginBottom="@dimen/spacing_large_56"
+            android:layout_marginBottom="@dimen/photo_placeholder_img_margin_bottom"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_add_a_photo_24"
             />
