--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,10 +4,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="172dp"
                 android:background="@drawable/drawer_header_bg"
-                android:paddingBottom="@dimen/spacing_small_8"
-                android:paddingLeft="@dimen/spacing_normal_16"
-                android:paddingRight="@dimen/spacing_normal_16"
-                android:paddingTop="@dimen/spacing_medium_24">
+                android:paddingBottom="@dimen/drawer_header_padding_b"
+                android:paddingLeft="@dimen/drawer_header_padding_h"
+                android:paddingRight="@dimen/drawer_header_padding_h"
+                android:paddingTop="@dimen/drawer_header_padding_t">
     <!--
         <ImageView
             android:id="@+id/user_avatar"
@@ -19,12 +19,12 @@
         android:id="@+id/avatar"
         android:layout_width="@dimen/avatar_size"
         android:layout_height="@dimen/avatar_size"
-        android:layout_marginTop="@dimen/spacing_normal_16"
+        android:layout_marginTop="@dimen/drawer_header_avatar_margin_top"
         />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/size_medium_56"
+        android:layout_height="@dimen/drawer_header_user_name_layout_height"
         android:layout_alignParentBottom="true"
         android:gravity="center_vertical"
         android:orientation="vertical">
