--- a/app/src/main/res/layout/user_list_item_ratings.xml
+++ b/app/src/main/res/layout/user_list_item_ratings.xml
@@ -6,10 +6,10 @@
     android:id="@+id/user_ratings"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_grey"
+    android:background="@android:color/white"
     android:orientation="horizontal"
-    android:paddingBottom="@dimen/user_ratings_padding_v"
-    android:paddingTop="@dimen/user_ratings_padding_v">
+    android:paddingBottom="@dimen/user_list_item_ratings_padding_v"
+    android:paddingTop="@dimen/user_list_item_ratings_padding_v">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -23,19 +23,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/header_test_rating_vol"
-            android:textAppearance="@style/user_rating_textAppearance"/>
+            android:textAppearance="@style/user_list_item_rating_textAppearance"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/header_rating"
-            android:textAppearance="@style/user_rating_caption_textAppearance"/>
+            android:textAppearance="@style/user_list_item_rating_caption_textAppearance"/>
     </LinearLayout>
 
-    <View
-        android:layout_width="@dimen/line_size"
-        android:layout_height="@dimen/user_ratings_divider_height"
-        android:background="@color/color_grey_light"/>
+
 
     <LinearLayout
         android:layout_width="0dp"
@@ -49,19 +46,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/header_test_code_strings_vol"
-            android:textAppearance="@style/user_rating_textAppearance"/>
+            android:textAppearance="@style/user_list_item_rating_textAppearance"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/header_code_strings"
-            android:textAppearance="@style/user_rating_caption_textAppearance"/>
+            android:textAppearance="@style/user_list_item_rating_caption_textAppearance"/>
     </LinearLayout>
 
-    <View
-        android:layout_width="@dimen/line_size"
-        android:layout_height="@dimen/user_ratings_divider_height"
-        android:background="@color/color_grey_light"/>
 
     <LinearLayout
 
@@ -76,13 +69,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/header_test_projects_vol"
-            android:textAppearance="@style/user_rating_textAppearance"/>
+            android:textAppearance="@style/user_list_item_rating_textAppearance"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/header_projects"
-            android:textAppearance="@style/user_rating_caption_textAppearance"/>
+            android:textAppearance="@style/user_list_item_rating_caption_textAppearance"/>
     </LinearLayout>
 
 </LinearLayout>
