--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-        <item android:title="Мой профиль"
-            android:checkable="true"
-            android:id="@+id/profile"
-            android:icon="@drawable/ic_account_circle_black_24dp"/>
 
-        <item android:title="Команда"
-              android:id="@+id/team"
-              android:icon="@drawable/ic_people_black_24dp"/>
+        <item
+            android:id="@+id/team"
+            android:icon="@drawable/ic_people_black_24dp"
+            android:title="@string/team"/>
+
+        <item
+            android:id="@+id/profile"
+            android:checkable="true"
+            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:title="@string/my_profile"/>
 
         <item
             android:id="@+id/logout"
             android:icon="@drawable/ic_logout_black_24dp"
-            android:title="@string/logout" />
+            android:title="@string/logout"/>
 
     </group>
 </menu>
