задание 7: выполнены все основные и доп. пункты

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -156,8 +156,9 @@
         <item name="android:textSize">@dimen/text_size_20</item>
     </style>
 
-
-
+    <style name="progress_screen">
+        <item name="android:fullDark">@android:color/transparent</item>
+    </style>
 
 
 </resources>
