--- a/app/src/main/res/values/text_sizes.xml
+++ b/app/src/main/res/values/text_sizes.xml
@@ -22,5 +22,6 @@
     <dimen name="text_size_16">16sp</dimen>
     <dimen name="text_size_20">20sp</dimen>
     <dimen name="user_profile_info_text_size">16sp</dimen>
+    <dimen name="splash_text_size">22sp</dimen>
 
 </resources>
