подправлена логика появления экранов

--- a/app/src/main/res/layout/activity_user_list.xml
+++ b/app/src/main/res/layout/activity_user_list.xml
@@ -4,9 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
-    >
+    android:layout_height="match_parent">
 
     <android.support.v4.widget.DrawerLayout
 
@@ -54,6 +52,9 @@
     </android.support.v4.widget.DrawerLayout>
 
 
+    <include layout="@layout/splash_screen"/>
+
+<!--
     <ProgressBar
         android:id="@+id/progress"
         style="?android:attr/progressBarStyleLarge"
@@ -63,4 +64,5 @@
         android:layout_gravity="center"
         android:visibility="invisible"
         />
+ -->
 </FrameLayout>
