--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -21,4 +21,9 @@
     <declare-styleable name="AspectRatioImageView">
         <attr name="aspect_ratio" format="float"/>
     </declare-styleable>
+
+
+    <declare-styleable name="ToogleImageButton">
+        <attr name="checked" format="boolean"/>
+    </declare-styleable>
 </resources>
